--- a/Codigo/Senai.LanHouse.Web.Razor/Senai.LanHouse.Web.Razor/Senai.LanHouse.Web.Razor.csproj
+++ b/Codigo/Senai.LanHouse.Web.Razor/Senai.LanHouse.Web.Razor/Senai.LanHouse.Web.Razor.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\images\rocketz_logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.11" />
